refactor Input Systems Settings
Former-commit-id: 40218dcc6bf62cb116ce0cfbb0f16e9553733ee5

--- a/src/angular-app/languageforge/lexicon/views/input-systems.html
+++ b/src/angular-app/languageforge/lexicon/views/input-systems.html
@@ -120,7 +120,7 @@
 	</div>
 </div>
 
-<pre data-ng-show="true">
+<pre data-ng-show="false">
 inputSystems['{{currentInputSystemTag}}'] {{inputSystems[currentInputSystemTag] | json}}
 </pre>
 
