--- a/src/angular-app/languageforge/lexicon/directive/dc-rendered.css
+++ b/src/angular-app/languageforge/lexicon/directive/dc-rendered.css
@@ -7,3 +7,16 @@
 .dc-rendered.definition {
 	margin-left: 10px;
 }
+
+.dc-rendered.definition .number {
+	font-weight: bold;
+}
+
+.dc-rendered.definition .partOfSpeech {
+	font-style: italic;
+}
+
+.dc-rendered.definition .definition-content {
+	font-weight: normal;
+	font-style: normal;
+}
