changed semanticDomainValue to semanticDomain
Former-commit-id: bcf9138641bda78cd71ce0cfe5a1d3d4f86aaf1d

--- a/src/angular-app/languageforge/lexicon/views/settings.html
+++ b/src/angular-app/languageforge/lexicon/views/settings.html
@@ -33,10 +33,10 @@
 						<div class="checkbox"><input type="checkbox" data-ng-model="fieldConfig['partOfSpeech'].visible">
 							 {{fieldConfig['partOfSpeech'].label}}</div>
 					</div>
-					<div data-ng-click="selectField('semanticDomainValue')" 
-						data-ng-class="{selected:currentField.name == 'semanticDomainValue'}">
-						<div class="checkbox"><input type="checkbox" data-ng-model="fieldConfig['semanticDomainValue'].visible">
-							 {{fieldConfig['semanticDomainValue'].label}}</div>
+					<div data-ng-click="selectField('semanticDomain')" 
+						data-ng-class="{selected:currentField.name == 'semanticDomain'}">
+						<div class="checkbox"><input type="checkbox" data-ng-model="fieldConfig['semanticDomain'].visible">
+							 {{fieldConfig['semanticDomain'].label}}</div>
 					</div>
 				</div></dd>
 				<dt>Lex Examples</dt>
