LIFT Import layout

--- a/src/angular-app/languageforge/lexicon/views/import-export.html
+++ b/src/angular-app/languageforge/lexicon/views/import-export.html
@@ -2,40 +2,38 @@
 <h2 style="font-weight:normal">Import/Export</h2>
 <tabset>
 	<tab heading="LIFT Import">
-		<div data-ng-controller="LiftImportCtrl">
-		<form class="well " data-ng-submit="updateImport()">
-			<label>Upload a LIFT File</label>
-			<div class="drop-box" data-ng-file-drop="onFileSelect($files);" data-ng-file-drop-available="dropSupported=true">
+		<div class="well" data-ng-controller="LiftImportCtrl">
+			<label>Import a LIFT File</label>
+			<div class="drop-box" data-ng-file-drop="onFileSelect($files);" data-ng-file-drop-available="dropSupported=true" data-ng-show="dropSupported">
 				<h4>Drop a LIFT file here</h4>
 				<br/>
 				<p>or if you prefer...</p>
 			    <input type="button" class="btn" value="Browse..." onclick="javascript:document.getElementById('liftFile').click();">
 			    <input id="liftFile" type="file" style="display:none;" data-ng-file-select="onFileSelect($files)">
 			</div>
-			<div data-ng-show="!dropSupported">HTML5 Drop File is not supported on this browser</div>
+			<div data-ng-show="!dropSupported"> <!-- HTML5 Drop File is not supported on this browser -->
+				<input type="button" class="btn" value="Browse..." onclick="javascript:document.getElementById('liftFile').click();">
+			    <input id="liftFile" type="file" style="display:none;" data-ng-file-select="onFileSelect($files)">
+			</div>
 			<br />
-			<div data-ng-show="file != null">
-				<p><strong>{{file.name}}</strong> {{file.size | bytes }}</p>
-				<div class="span4" data-margin-left="-50px"><progress data-percent="progress"></progress></div>&nbsp;
-			</div>
-			<label>&nbsp;</label>
-			<div data-ng-bind-html="uploadResult"></div>
-			
-			<div class="control-group">
-				<div class="controls">
-					<label class="checkbox">
-						<input type="checkbox" data-ng-model="mergeWithExisting"/>Merge with existing</label>
+			<form data-ng-show="file != null">
+				<p><strong>{{file.name}}</strong>&nbsp;&nbsp;&nbsp;{{file.size | bytes }}</p>
+				<div class="control-group">
+					<div class="controls">
+						<label class="checkbox">
+							<input type="checkbox" data-ng-model="mergeWithExisting"/>Merge with existing</label>
+					</div>
+					<div class="controls indent1" data-ng-show="mergeWithExisting">
+						<label class="checkbox">
+							<input type="checkbox" data-ng-model="allowDuplicates"/>Allow duplicates</label>
+					</div>
 				</div>
-				<div class="controls indent1" data-ng-show="mergeWithExisting">
-					<label class="checkbox">
-						<input type="checkbox" data-ng-model="allowDuplicates"/>Allow duplicates</label>
-				</div>
-			</div>
-			
-		</form>
-<pre data-ng-show="false">
-</pre>
+				<button class="btn btn-primary" data-ng-click="importLift()"><i class="icon-upload"></i>Import</button>
+			</form>
 		</div>
+<pre data-ng-show="true">
+file {{file | json}}
+</pre>
 	</tab>
 	<tab heading="LIFT Export">
 		<div data-ng-controller="LiftExportCtrl">
