Fields Settings - fix Input Systems ordering

--- a/src/angular-app/languageforge/lexicon/views/settings.html
+++ b/src/angular-app/languageforge/lexicon/views/settings.html
@@ -103,8 +103,8 @@
 		</div>
 		
 		</div>
-<pre data-ng-show="false">
-currentField.inputSystems {{currentField.inputSystems | json}}
+<pre data-ng-show="true">
+currentField {{currentField | json}}
 config.entry {{config.entry|json}}
 </pre>
 		</div>
