DBE: Improve listview - truncate long definitions
Using the https://github.com/sparkalow/angular-truncate filter, we can
change our listview text to include ellipses. Doing this in CSS is
almost impossible: you can include ellipses on a single line of text,
but ONLY on a single line of text. So it's best to do it in an Angular
filter instead.

Note: "almost" impossible. http://stackoverflow.com/q/6222616 has a way
to do it, but it's really ugly. An Angular filter is much, MUCH cleaner.

--- a/src/angular-app/languageforge/lexicon/views/dbe.css
+++ b/src/angular-app/languageforge/lexicon/views/dbe.css
@@ -115,3 +115,14 @@ legend.override-bootstrap {
 	top: 0px; /* Might need to increase this once the "For the demo, these do NOT work" text goes away */
 	right: 10px;
 }
+
+#entryList {
+	/* Override palaso-ui.css */
+	height: auto !important;
+}
+
+.outer-flex {
+	display: flex;
+	flex-direction: row;
+	align-items: stretch;
+}
