refactor mergeRule (duplicates)

--- a/src/angular-app/languageforge/lexicon/views/import-export.html
+++ b/src/angular-app/languageforge/lexicon/views/import-export.html
@@ -29,11 +29,11 @@
 				<div class="control-group">
 					<div class="controls">
 						<label class="radio">
-							<input type="radio" value="importLoses" data-ng-model="duplicates"/>Do not import the conflicting data (keep Language Forge data).</label>
+							<input type="radio" value="importLoses" data-ng-model="mergeRule"/>Do not import the conflicting data (keep Language Forge data).</label>
 						<label class="radio">
-							<input type="radio" value="importWins" data-ng-model="duplicates"/>Import the conflicting data and overwrite the current data (the importing data overrules the Language Forge data).</label>
+							<input type="radio" value="importWins" data-ng-model="mergeRule"/>Import the conflicting data and overwrite the current data (the importing data overrules the Language Forge data).</label>
 						<label class="radio">
-							<input type="radio" value="createDuplicates" data-ng-model="duplicates"/>Import the conflicting data into a new lexical entry or sense and I will make decisions myself later.</label>
+							<input type="radio" value="createDuplicates" data-ng-model="mergeRule"/>Import the conflicting data into a new lexical entry or sense and I will make decisions myself later.</label>
 					</div>
 					<div class="controls">
 						<label class="checkbox">
