--- a/src/angular-app/languageforge/lexicon/views/edit.html
+++ b/src/angular-app/languageforge/lexicon/views/edit.html
@@ -16,8 +16,8 @@
                 <table class="table table-condensed ">
                     <tbody>
                         <tr ng-class="{selected: e.id == currentEntry.id}" class="animate-repeat" ng-repeat="e in entries | filter:searchText">
-                            <td ng-click="editEntry(e.id)">{{e.title}}</td>
-                            <td ng-click="editEntry(e.id)">{{getMeaning(e.entry)}}</td>
+                            <td ng-click="editEntry(e.id)">{{getTitle(e)}}</td>
+                            <td ng-click="editEntry(e.id)">{{getMeaning(e)}}</td>
                         </tr>
                     </tbody>
                 </table>
@@ -29,7 +29,7 @@
                 <tab heading="Edit">
                 <div class="row">
                     <div class="span3">
-                        <div ng-show="entryLoaded()" style="margin-bottom:20px; font-size:20px; font-weight:bold;">{{entryTitle()}}</div>
+                        <div ng-show="entryLoaded()" style="margin-bottom:20px; font-size:20px; font-weight:bold;">{{getTitle()}}</div>
                     </div>
                     <div class="span2">
                         <button class="btn" ng-click="newEntry()"><i class="icon-plus"></i>New Word</button>
