--- a/src/angular-app/languageforge/lexicon/views/edit.html
+++ b/src/angular-app/languageforge/lexicon/views/edit.html
@@ -39,7 +39,7 @@
                     </div>
                 </div>
                 <div class="animate-show" ng-show="entryLoaded()" id="entryItemView">
-                    <div class="text-warn" ng-show="lexemeFormRequired">At least one lexeme form is required</div>
+                    <p class="text-error" ng-show="lexemeFormRequired">At least one lexeme form is required</p>
                     <dc-entry config="config" model="currentEntry"></dc-entry>
                 </div>
                 </tab>
