--- a/src/angular-app/languageforge/lexicon/views/import-export.html
+++ b/src/angular-app/languageforge/lexicon/views/import-export.html
@@ -58,6 +58,7 @@ file {{file | json}}
 			<!-- Right column: task setup -->
 			<div class="span9">
 				<div class="well">
+					<h4>Hang in there, this feature is coming</h4>
 				</div>
 			</div>
 		
@@ -66,6 +67,20 @@ file {{file | json}}
 </pre>
 	</tab>
 	<tab heading="Settings Import">
+		<div class="row">
+		
+			<!-- Left column: task list -->
+			<div class="span3 control-group">
+			</div>
+			
+			<!-- Right column: task setup -->
+			<div class="span9">
+				<div class="well">
+					<h4>Hang in there, this feature is coming</h4>
+				</div>
+			</div>
+		
+		</div>
 	</tab>
 </tabset>
 </div>
