remove or comment debug <pre>
Former-commit-id: e78e542b1cb30289823a2c7344c7662627bf1a51

--- a/src/angular-app/languageforge/lexicon/views/settings.html
+++ b/src/angular-app/languageforge/lexicon/views/settings.html
@@ -103,10 +103,12 @@
 		</div>
 		
 		</div>
-<pre data-ng-show="true">
+<!-- 
+<pre data-ng-show="false">
 currentField {{currentField | json}}
 config.entry {{config.entry|json}}
 </pre>
+ -->
 		</div>
 	</tab>
 	<tab heading="Tasks">
@@ -233,9 +235,11 @@ config.entry {{config.entry|json}}
 		</div>
 		
 		</div>
+<!-- 
 <pre data-ng-show="false">
 config.tasks['{{currentTaskName}}'] = {{config.tasks[currentTaskName] | json}}
 </pre>
+ -->
 		</div>
 	</tab>
 </tabset>
