--- a/src/angular-app/languageforge/lexicon/views/settings.html
+++ b/src/angular-app/languageforge/lexicon/views/settings.html
@@ -127,7 +127,7 @@ config.entry {{config.entry|json}}
 				<dt>Dictionary</dt>
 				<dd><div class="controls">
 					<div data-ng-click="selectTask('dbe')" data-ng-class="{selected:currentTaskName == 'dbe'}">
-						<div class="checkbox"><input type="checkbox" data-ng-model="config.tasks['dbe'].visible"> Dictionary Browse &amp; Edit</div>
+						<div class="checkbox"><input type="checkbox" data-ng-model="config.tasks['dbe'].visible"> Browse &amp; Edit</div>
 					</div>
 				</div></dd>
 				<dt>Add Information</dt>
