--- a/src/angular-app/languageforge/lexicon/ng-app.css
+++ b/src/angular-app/languageforge/lexicon/ng-app.css
@@ -1,48 +1,8 @@
 /* Top navigation */
-div.hdrnav {
-	margin-left: 122px;
-	padding-top: 20px;
-	position: relative;
-}
-
-div#inviteAFriend .overlay {
-	top: 52px;
-	right: 0px;
-}
-
-div.hdrnav img {
-	margin-right: 12px;
-}
-
-ul.topNav {
-	margin: 0;
-}
-
-ul.topNav > li {
-	background: #777777;
-	display: inline-block;
-	margin-top: 2px;
-	margin-right: 7px;
-}
-
-ul.topNav li:hover {
-	background: #F08030;
-}
-
-ul.topNav li.here {
-	background-image: url(/images/languageforge/default/lf_header-bar-bkg.png);
-}
-
-ul.topNav a {
-	color: #fff;
-	display: block;
-	padding: 6px 12px 6px 12px;
-	text-decoration: none;
-}
-
 div.lexnav {
 	overflow: visible;
-	padding-left: 117px;
+	padding-left: 0px;
+/*	padding-left: 117px;	Align with topNav and breadcrumbs */
 }
 
 .lexnav a {
