--- a/src/css/languageforge/default/lf.css
+++ b/src/css/languageforge/default/lf.css
@@ -629,63 +629,23 @@ i.icon-remove {
 }
 
 /* Top navigation */
-/*
 div.hdrnav {
-	overflow: visible;
-	padding-left: 130px;
-	width: 100%;
+	margin-left: 122px;
+	padding-top: 20px;
+	position: relative;
 }
 
-
-div.hdrnav ul {
-	margin-left: 0px;
-	margin-top: 15px;
+div#inviteAFriend .overlay {
+	top: 52px;
+	right: 0px;
 }
 
 div.hdrnav img {
 	margin-right: 12px;
 }
 
-.hdrnav li {
-  display: inline;
-  padding: 0.5em;
-  margin-right: 5px;
-  background: #eee;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-}
-
-.hdrnav a {
-  font-family: Helvetica Arial sans-serif;
-  font-size: 0.9em;
-  text-decoration: none;
-  color: #3f7ca4;
-}
-
-.hdrnav .submenu {
-	position: relative;
-}
-
-.hdrnav .submenu a {
-	cursor: pointer;
-}
-
-.hdrnav .submenu > a:hover {
-	text-decoration: none;
-}
-
-.hdrnav .submenu ul {
-	position: absolute;
-	padding-left: 0px;
-	left: 0em;
-	top: 1.1em;
-	line-height: 1.2em;
-	z-index: 9; /* One less than the z-index: 10 used for header *//*
-}
-
-.hdrnav .submenu ul li {
-	display: block;
-	border-radius: 0px;
+ul.topNav {
+	margin: 0;
 }
 
 ul.topNav > li {
@@ -706,9 +666,10 @@ ul.topNav li.here {
 ul.topNav a {
 	color: #fff;
 	display: block;
+	padding: 6px 12px 6px 12px;
 	text-decoration: none;
 }
-*/
+
 div#logo-small {
 	width: 27px;
 	height: 36px;
