more refactor settings as configuration

--- a/src/angular-app/languageforge/lexicon/views/configuration.html
+++ b/src/angular-app/languageforge/lexicon/views/configuration.html
@@ -165,8 +165,8 @@ config.entry {{config.entry|json}}
 					<div data-ng-click="selectTask('importExport')" data-ng-class="{selected:currentTaskName == 'importExport'}">
 						<div class="checkbox"><input type="checkbox" data-ng-model="config.tasks['importExport'].visible">Import/Export</div>
 					</div>
-					<div data-ng-click="selectTask('settings')" data-ng-class="{selected:currentTaskName == 'settings'}">
-						<div class="checkbox"><input type="checkbox" disabled data-ng-model="config.tasks['settings'].visible">Settings</div>
+					<div data-ng-click="selectTask('configuration')" data-ng-class="{selected:currentTaskName == 'configuration'}">
+						<div class="checkbox"><input type="checkbox" disabled data-ng-model="config.tasks['configuration'].visible">Dictionary Configuration</div>
 					</div>
 				</div></dd>
 			</dl>
